tests/NormalTests/paczka1/fuzzy1/64672516.err
Error in line 4: A54 A402 99,9
Error in line 23: WAgSUU A54 91,6
Error in line 21: A54 A402 68,6
Error in line 28: MZF9xx A355 6,3
Error in line 25: WtD A355 3,9
